# ProjetoEDA

./: .gitignore  CMakeLists.txt  README.md  jobs.json
gui/: CMakeLists.txt  font.cpp  font.h  font_icons.cpp  gui.cpp  view.cpp  window.cpp
gui/dialog/: ImGuiFileDialog.cpp
gui/imgui/: bridge.cpp  bridge.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
gui/include/gui/: font_icons.h  gui.h  view.h  window.h
gui/include/gui/internal/: gui.h
gui/libs/: CMakeLists.txt
gui/libs/glew/: glew.pc
gui/libs/glfw/: CHANGES.txt
gui/libs/glfw/src/: CMakeLists.txt
include/: job.h  job_loader.h  job_manager.h  job_utils.h  list.h  operation.h  tests.h  utils.h  views.h
src/: job.c  job_loader.c  job_manager.c  job_utils.c  list.c  main.c  operation.c  tests.c
src/views/: escalation_view.c  job_view.c  jobs_view.c  max_time_view.c  min_time_view.c
